# tsmd-evaluation

./: .gitignore  apply_locomotif.ipynb  generate_benchmarks.ipynb  generation.py  pyproject.toml  read_ucr.py  results.ipynb  znormalize.ipynb
benchmarks/: metadata.pkl
benchmarks/ecg5000/: test.pkl  train.pkl
benchmarks/ering/: test.pkl  train.pkl
benchmarks/fungi/: train.pkl
benchmarks/japanesevowels/: test.pkl  train.pkl
benchmarks/mixedshapessmalltrain/: train.pkl
benchmarks/pendigits/: test.pkl  train.pkl
benchmarks/plane/: test.pkl  train.pkl
benchmarks/spokenarabicdigits/: train.pkl
benchmarks/symbols/: train.pkl
benchmarks/syntheticcontrol/: test.pkl  train.pkl
cluster/: cluster.ipynb  parallel_cdist.py
tsmd_evaluation/: benchmark_generation.py  evaluation.py
ucr_datasets/allgesturewiimotex/: znormalized.pkl
ucr_datasets/allgesturewiimotey/: znormalized.pkl
ucr_datasets/allgesturewiimotez/: znormalized.pkl
ucr_datasets/articularywordrecognition/: test.pkl  train.pkl
ucr_datasets/charactertrajectories/: CharacterTrajectories_TRAIN.ts  test.pkl  train.pkl
ucr_datasets/ecg5000/: train.pkl
ucr_datasets/ering/: test.pkl  train.pkl  znormalized.pkl
ucr_datasets/fungi/: test.pkl  train.pkl  znormalized.pkl
ucr_datasets/gesturemidaird1/: znormalized.pkl
ucr_datasets/gesturemidaird2/: znormalized.pkl
ucr_datasets/gesturemidaird3/: znormalized.pkl
ucr_datasets/gesturepebblez1/: znormalized.pkl
ucr_datasets/gesturepebblez2/: znormalized.pkl
ucr_datasets/handwriting/: znormalized.pkl
ucr_datasets/japanesevowels/: test.pkl  (+2 more)
(+2102 files in other folders)
